<resources>
    <string name="app_name">ProyectoBJCS</string>
    <string name="Titulo1">LOS MEJORES 7 VIDEOJUEGOS DE TERROR</string>
    <string name="imagen1">imagen1</string>
    <string name="principal">SELECCIONA PARA VER INFORMACION</string>
    <string name="boton1">RESIDENT EVIL</string>
    <string name="boton2">SILENT HILL</string>
    <string name="boton3">DEAD SPACE</string>
    <string name="boton4">OUTLAST</string>
    <string name="boton5">THE EVIL WITHIN</string>
    <string name="boton6">AMNESIA</string>
    <string name="boton7">ALIEN INSOLATION</string>
    <string name="boton8">Acerca de</string>
    <string name="imagen2">resident</string>
    <string name="cont1">Biohazard (バイオハザード Baiohazādo?, \'riesgo biológico\') —nombre con que se conoce en Japón—, rebautizado en Estados Unidos y Europa como Resident Evil (“el mal que reside”) es una serie de videojuegos y una franquicia de medios, entre los que se incluyen Manga, novelas, películas y coleccionables como figuras de acción, guías de estrategia y otras publicaciones.1​ Desarrollados por Capcom y creados por Shinji Mikami la mayoría, al año 2014, se han vendido 61 millones de copias de los videojuegos en todo el mundo. Así como en la saga principal de videojuegos, como en otros medios, la trama gira en torno al mismo conflicto: la amenaza bioterrorista. Un peligroso virus se ha propagado por error o intencionalmente por la Corporación Umbrella, este al infectar a los humanos, los transforma en seres amorfos y monstruos.         Jugabilidad clásica Los primeros juegos tenían un ángulo de cámara con planos fijos en 3D que ayudaban a causar miedo e incertidumbre, salvo en los tiempos de carga que había entre habitaciones en los que el juego simulaba una vista en primera persona, ejemplos claros de esto son los 3 primeros juegos: RE1, RE2, y RE3, Code Veronica o la saga Outbreak: 1 y 2 y el Resident Evil Zero. Esto fue cambiando conforme al tiempo.  Nueva era La nueva era da la bienvenida a la tercera persona, y así también al Survival Action.  Desde la llegada de Resident Evil 4 (2005) se conserva mayoritariamente la tercera persona y se cambia a una vista sobre el hombro, al mismo tiempo que se despide al género survival horror y se acerca más al Survival Action. Con la llegada de Resident Evil 5 (2009) esto se acentuó más, dando aún más importancia a la acción que el terror. Sin Embargo con la llegada del título Resident Evil: Revelations (2012) y Resident Evil: Revelations 2 (2015) esto cambió, dando más importancia al terror, con una jugabilidad más pausada, pudiéndose apuntar y caminar al mismo tiempo (jugabilidad antes vista en Resident Evil Outbreak file #2 y Resident Evil Dead Aim) esta es mejorada gracias a la camara en tercera persona que maneja el juego , mezclando el manejo del personaje al estilo Resident Evil 4 con el de Resident Evil 5. Resident Evil 6 (2012) llegó mezclando muchos de los elementos de la nueva era, mejorado el sistema de coberturas, mejorando el sistema de peleas cuerpo a cuerpo, y también incorporando la opción de apuntar y caminar al mismo tiempo, con 4 campañas, una centrada en el terror, otras 2 en la acción pura y otra en el sigilo.</string>
    <string name="boton9">Atrás</string>
    <string name="evil">The Evil Within, conocido en Japón como Psycho Break (サイコブレイク Saikobureiku?, lit. La maldad interior) es un videojuego perteneciente al género de Horror de supervivencia en tercera persona el cual fue desarrollado por el estudio Tango Gameworks y publicado por la empresa Bethesda Softworks. El juego fue dirigido por el creador de la serie Resident Evil, Shinji Mikami, y se lanzó en todo el mundo en octubre de 2014 para las consolas PlayStation 3, PlayStation 4, Xbox 360, Xbox One y Microsoft Windows.1​  El videojuego se centra en el protagonista Sebastian Castellanos mientras es atraído por un mundo distorsionado lleno de lugares de pesadilla y criaturas horribles. Jugado en una perspectiva en tercera persona, los jugadores combaten a los enemigos desfigurados como pesadillas, incluidos los jefes, usando pistolas y armas cuerpo a cuerpo, y progresan a través de los niveles, evitando trampas, usando el sigilo y encontrando coleccionables.  The Evil Within recibió una recepción generalmente positiva al momento de su liberación; los elogios se dirigieron principalmente a los elementos de terror y a la atmósfera del videojuego, mientras que las críticas se dirigieron a la historia, los personajes y los problemas técnicos del juego. Una secuela, The Evil Within 2, fue lanzado el 13 de octubre de 2017.       La historia para el jugador está organizada en capítulos, que los jugadores completan para avanzar a través de la historia. El videojuego se muestra desde una perspectiva en tercera persona en la que buscar materiales y aprender cuándo pelear o correr son factores clave para sobrevivir a los peligros del juego.2​ Tales peligros incluyen: trampas para osos, trampas de alambre de púas, bombas y trampas de espinas; \'The Haunted\', el enemigo más común del juego; y de \'Reborn Laura\', es una criatura con múltiples extremidades, pelo largo, y reptante; Ruvik, el principal antagonista del juego; \'The Keeper\', un humanoide grande con una cabeza envuelta en una caja de seguridad que maneja un gran martillo ablandador de carne; y \'Sadista\', un humanoide grande con una máscara de metal con púas en la cara, empuñando una motosierra cubierta de sangre.3​4​  Sebastian Castellanos, el protagonista, necesita hacer uso del medio ambiente y de las cosas que puede encontrar para sobrevivir. El mundo del videojuego puede transformarse durante los eventos guionados y como resultado de las acciones de los jugadores, alterando ubicaciones y creando nuevas rutas o teletransportando al jugador a nuevas áreas. Castellanos debe usar artículos médicos para restaurar su salud; algunos de estos artículos causan efectos alucinógenos temporales. Mediante la recopilación de viales de \"Gel Verde\" ocultos durante el juego, los jugadores pueden actualizar las habilidades de Castellanos; más municiones, más resistencia y salud adicional son algunas de las mejoras posibles.5​  Los jugadores tienen una casa segura llamada \'Safe Haven\' a la que se puede acceder durante los eventos de historia y al encontrar espejos. La casa de seguridad es un hospital psiquiátrico y tiene varias áreas accesibles como un punto de guardado, una sala de actualización (donde el jugador puede actualizar las habilidades de Sebastian) y la sala de seguridad donde se usan las llaves para abrir cajas fuertes que contienen elementos útiles como gel verde y municiones. Estas claves se recopilan encontrando y rompiendo las estatuas de \'Madonna\' ocultas en todos los niveles del juego. Hay una enfermera llamada Tatiana que saluda a Sebastian cuando se teletransporta a la casa de seguridad.6​  El jugador tiene acceso a varias armas, como un revólver, una escopeta, un rifle de francotirador, un cuchillo, granadas y la \'Ballesta de la Agonía\', un arma proyectil que dispara rayos capaces de congelar, cegar, electrocutar o explotar a los enemigos. La munición para armas es muy escasa, pero los componentes mecánicos se pueden cosechar para fabricar pernos adicionales. Una fuente de componentes, bombas, son trampas que reaccionan a la proximidad o movimiento del jugador. Las bombas pueden pegarse a las paredes o al piso, en cofres y en máquinas expendedoras. Las bombas se pueden desarmar a través de un minijuego.5​ El combate cuerpo a cuerpo está diseñado solo para crear distancia entre el jugador y los enemigos, aunque el jugador puede matar instantáneamente a algunos enemigos desprevenidos después de escabullirse detrás de ellos.7​ Los enemigos derribados o incapacitados son capaces de revivir; para evitar esto, los jugadores pueden prender fuego al enemigo caído usando un suministro limitado de cerillas para derrotarlos permanentemente.5​7​ Ciertos elementos del entorno, como botellas, pueden arrojarse para aturdir o distraer a los enemigos.8​  Hay siete tipos diferentes de coleccionables en The Evil Within: Los \'Documentos personales\'; El registro personal de Sebastian, que detalla su vida como detective y su vida con su esposa y su hija. \'Documentos\'; los registros personales de otros personajes. \'Fragmentos del mapa\'; piezas del mapa del juego; una vez recogidos, se almacenan en la casa de seguridad. \'Periódicos\'; periódicos que detallan eventos que conciernen o involucran a Sebastian. \'Carteles de personas desaparecidas\'; carteles de personajes que Sebastian encuentra a lo largo del juego que han sido reportados como desaparecidos. \'Cintas de Audio\'; cintas que contienen una grabación que se puede reproducir y que son grabadas por los personajes a través del juego. Los coleccionables se pueden encontrar en niveles propios o en la casa de seguridad.9​10​  El jugador desbloquea varios bonos para completar el juego. Armas extra, modelos de personajes y biografías, dificultad \'AKUMU\' (el nivel de dificultad más difícil del juego) y Nuevo juego + son algunos de los desbloqueables.</string>
    <string name="imagen5">evil</string>
    <string name="amne">Amnesia: The Dark Descent3​ y que no debe ser confundido con Thomas M. Disch\'s Amnesia) es un juego de terror para PC, PlayStation 4 y Xbox one desarrollado por Frictional Games, que desarrolló anteriormente la serie Penumbra.      Estilo de juego De manera similar a los anteriores juegos desarrollados por la compañía, Amnesia es un juego de aventura basado en la exploración y con una perspectiva en primera persona. El jugador no tiene acceso a armas, y debe utilizar su ingenio para evitar las truculentas criaturas que habitan el castillo de Brennenburg o bien esconderse de ellos. El juego además mantiene la interacción física con objetos utilizada en Penumbra, permitiendo puzles físicos avanzados como apertura de puertas y arreglos de maquinaria.4​  Debido a esto, el jugador debe utilizar su ingenio para escapar y ocultarse de los monstruos hasta que pasen de largo. Se recomienda utilizar la oscuridad para ocultarse. Existen cuatro tipos de criaturas, o enemigos: Los siervos gruñidores, los primeros en aparecer; los siervos brutos, parecidos a los anteriores, pero con partes metálicas en su cuerpo y son más fuertes y peligrosos; los kaernk, son criaturas invisibles que habitan en el agua y se les visualiza al moverse en ella; y la Sombra, el cual persigue a Daniel durante unas zonas específicas del juego. Los tejidos rojos revelan su anterior presencia por el lugar.  Aparte de la barra de salud del jugador existe un indicador de la cordura del personaje. Si permanece en la oscuridad demasiado, presencia acontecimientos perturbadores u observa a los monstruos demasiado tiempo su nivel de cordura se reducirá. A medida que la cordura decrezca, el jugador experimentará alucinaciones audiovisuales que provocarán que los monstruos lo detecten con mayor facilidad. El jugador puede detener la pérdida de cordura utilizando encendedores para encender velas y otras fuentes de luz, así como mediante el uso de un farol que encuentra al principio del juego. Pero tanto el número de encendedores como el aceite del farol son limitados y no pueden ser utilizados indefinidamente, además al encenderlos la luz facilita a los enemigos la localización del protagonista. Esto fuerza al jugador a encontrar un equilibrio entre el tiempo que pasa en zonas de luz y de oscuridad. En cualquier caso, el nivel de cordura se restaura al completar objetivos y al avanzar en la historia del juego.</string>
    <string name="amne_">TODO</string>
</resources>